--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.15.3",
     "hbs": "^4.0.1",
     "passport": "^0.3.2",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^6.2.3",
