--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/apoorvaagupta/MathonGo-2#readme",
   "dependencies": {
+    "are-we-there-yet": "^1.1.4",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "connect-ensure-login": "^0.1.1",
@@ -28,7 +29,7 @@
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "pg": "^6.2.3",
+    "pg": "^6.4.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4",
     "uid2": "0.0.3"
